<resources>
    <string name="app_name">Accurate Ride</string>
    <string name="gps_wait">Waiting for GPS</string>
    <string name="gps_locked">GPS locked. Ready to go.</string>
    <string name="gps_started">GPS started. Waiting for lock&#8230;</string>
    <string name="gps_stopped">GPS stopped.</string>

    <string name="initial_value">0.00</string>
    <string name="title_activity_maps">My ride</string>

    <!-- component -->
    <string name="stat_label_generic">Stat</string>
    <string name="stat_value_generic">0.0</string>
    <string name="stat_unit_generic">d/t</string>

    <string name="stat_label_speed">Speed</string>
    <string name="stat_label_cadence">Cadence</string>
    <string name="stat_label_distance">Distance</string>
    <string name="stat_label_time">Elapsed time</string>

    <string name="stat_unit_mts">ms</string>
    <string name="stat_unit_kms">kms</string>
    <string name="stat_unit_kmh">km/h</string>
    <string name="stat_unit_ms">m/s</string>

    <string name="stat_unit_minutes">mins</string>
    <string name="gps_status">GPS status</string>
    <string name="status_ok">OK</string>
    <string name="status_nok">NOK</string>
    <string name="network_status">Network status</string>
    <string name="accuracy_in_meters">Accuracy in meters</string>
    <string name="altitude_in_meters">Altitude in meters</string>
    <string name="pref_unit_value_default">km/h</string>
    <string name="pref_unit_of_measure_title">Unit of measure</string>
    <string name="pref_wheel_size_title">Wheel size</string>
    <string name="pref_wheel_size_hint">Enter the wheel size</string>
    <string name="pref_chainring_title">Chainring</string>
    <string name="pref_chainring_hint">Enter the chainring, that is the first value of your crankset</string>
    <string name="pref_cog_hint">Enter the cog, that is the second value of your crankset</string>
    <string name="pref_cog_title">Cog</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="btn_settings_text">Settings</string>
    <string name="btn_stop_text">Stop</string>
    <string name="btn_record_text">Record</string>
    <string name="pref_unit_summary">Current unit of measure is</string>
    <string name="pref_wheel_size_summary">Current wheel size is</string>
    <string name="pref_chainring_summary">Current chainring on your crankset is</string>
    <string name="pref_cog_summary">Current cog on your crankset is</string>
</resources>
